new page for display

--- a/sellyourhome.html
+++ b/sellyourhome.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Cristian Lazo Work With Us</title>
+    <title>Cristian Lazo Sell Your Home</title>
     <link href="css/reset.css" rel="resetcss">
     <link href="js/java.js" rel="Script">
     <link href="css/style.css" rel="stylesheet">
