--- a/workwithus.html
+++ b/workwithus.html
@@ -94,7 +94,7 @@
 
             <div class="signUpForm">
 
-                <p> Sign Up </p>
+                <p> Contact Us </p>
                 <form action="mail_handler.php" method="post">
                     First Name:
                     <input type="text" name="first_name">
