anchor links updated

--- a/workwithus.html
+++ b/workwithus.html
@@ -25,27 +25,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Properties</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="workwithus.html
+                ">Contact</a></li>
 
         </ul>
     </nav>
 
 
     <div id="wrapper">
-
-
-        <!--
-
-        <header>
-
-            <img src="http://i.imgur.com/wy4EFgN.jpg" rel="main header" title="Real State NJ NY"></img>
-
-        </header>
--->
-
-
-
-
 
 
         <div class="main">
