--- a/sellyourhome.html
+++ b/sellyourhome.html
@@ -25,7 +25,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Properties</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="workwithus.html
+                ">Contact</a></li>
 
         </ul>
     </nav>
